Cultibox (1.1.36) precise; urgency=low
    + Modification de la taille de l'image de la cultibox pour rendre accéssible les menus en dessous
    + Ajout d'informations sur le calcul du coût réel et théorique dans l'onglet des coûts

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Oct 26 12:58:55 CEST 2013


Cultibox (1.1.35) precise; urgency=low
    + Ajout de textes d'aide pour les boutons 'Gestion des fichierx XML',  'Suppréssion des annotations' du calendrier et 'Création de programmes d'engrais'
    + Correction d'n filtre en fonction du substrat choisis pour le calendrier
    + Désactivation des boutons et modification du texte si aucun fichiers XML est présent

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Oct 24 11:33:49 CEST 2013


Cultibox (1.1.34) precise; urgency=low
    + Ajout de tests de vérification d'écriture sur la carte SD
    + Valeur par défaut appliquée sur un champ si un mauvais format est rentré
    + La suppréssion de tous les évènements du calendrier ainsi que l'ajout d'un calendrier d'engrais met à jour la carte SD
    + Correction du calcul du coût: correction de la modification du prix des heures creuses

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Oct 20 14:58:21 CEST 2013


Cultibox (1.1.33) precise; urgency=low
    + Remise en forme de l'image de la cultibox sur le logiciel
    + Remise en forme de de l'affichage des différentes partie des logs pour que la page ne bouge plus quand on choisis un affichage par mois ou par jour
    + Ajout d'un texte annoncant la suppréssion en cours d'une base de logs dans la fênetre de suppréssion des logs
    + Modification de la gestion des mises à jour qui renvoie vers le site cultibox pour le téléchargement des fichiers
    + Utilisation du fichier index pour gérer les différents capteurs possible de la Cultibox
    + Correction de l'affichage de la hauteur des legendes des programmes
    + La gestion des erreurs pour la partie 'prise' est gérée en AJAX sans rechargement